--- a/poller/package.json
+++ b/poller/package.json
@@ -4,8 +4,8 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "start": " node index.js",
-    "dev": "nodemon index.js",
+    "start": "node ws/index.js",
+    "dev": "nodemon ws/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
